Web app structure refactored

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,11 +1,11 @@
 doctype html
 html
   head
-    title ConfigShare
+    title Whisprs
     link rel='stylesheet' href='/style.css'
   body
     header
-      h1 Config Share
+      h1 Whisprs chat
     nav
       == slim :nav
     section
