Icon link fixed

--- a/views/nav.slim
+++ b/views/nav.slim
@@ -6,8 +6,8 @@ nav role="navigation" class="navbar navbar-default navbar-static-top"
       span class="icon-bar"
       span class="icon-bar"
       span class="icon-bar"
-      a class="navbar-brand" rel="home" href="/" title="Securely Share Configurations"
-        img alt="Wispers" src="/config-secure.png" style="max-width:35px; margin-top: -7px;"
+      a class="navbar-brand" rel="home" href="/" title="Securely Chat"
+        img alt="Wispers" src="/wispers.png" style="max-width:35px; margin-top: -7px;"
       a class="navbar-brand" href="/" Wispers
     div id="navbarCollapse" class="collapse navbar-collapse"
       ul class="nav navbar-nav"
