--- a/views/layout.slim
+++ b/views/layout.slim
@@ -21,13 +21,14 @@ html
     link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cerulean/bootstrap.min.css" rel="stylesheet"
     / Custom CSS
     link rel='stylesheet' href='/style.css'
+    link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'
   body
     / JQuery and Bootstrap JS
     script src="https://code.jquery.com/jquery-1.12.4.min.js"
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 
     == slim :nav
-    div class='container' id='html_body'
+    div class='container' id='html_body' align='center'
       section
         == slim :flash_bar
         == yield
