--- a/views/login.slim
+++ b/views/login.slim
@@ -1,9 +1,23 @@
-p 
-  form method='post' action='/account/login' id='form-login'
-    label for='username' Username
-    input type='text' name='username' id='input-username'
+p
+  div class='col-md-3'
+  form method='post' action='/account/login' id='form-login' class='col-md-6' style='font-family:Microsoft JhengHei;'
+
+  	div class='col-md-2'
+  	img src='/avatar.png' class='col-md-8' style='float:left;padding:6%;'
+    div class='col-md-2'
+
+    label for='username' class='col-md-12' style='font-size:22pt;' Username
+    div class='col-md-3'
+    input type='text' name='username' class='col-md-6' id='input-username'
+    div class='col-md-3'
     br
-    label for='password' Password
-    input type='password' name='password' id='input-password'
+    
+    label for='password' class='col-md-12' style='font-size:22pt;margin-top:20pt;' Password   
+    div class='col-md-3'
+    input type='password' name='password' class='col-md-6' id='input-password'
+    div class='col-md-3'
     br
-    input type='submit' id='button-login' value='login'
+
+    div class='col-md-12' style='margin-bottom:20pt;'
+    div class='col-md-3'
+    input type='submit' id='button-login' class='col-md-6 btn-primary btn-lg' value='login' style='border:solid;'
