--- a/views/messages_all.slim
+++ b/views/messages_all.slim
@@ -2,7 +2,8 @@ div class="row" style="vertical-align: bottom;"
   div class="col-xs-9"
     h3 All Messages
   div class="col-xs-3"
-    button type="button" class="btn btn-success" data-toggle="modal" data-target="#newMessageModal" + New Message
+    a href='/account/#{@current_account['username']}/new_message/'
+      button type="button" class="btn btn-success" data-toggle="modal" data-target="#newMessageModal" + New Message
 table class="table"
   thead
     tr
@@ -21,6 +22,6 @@ table class="table"
           td.about = message[:about]
           td.body = message[:expire_date]
           td.detail
-            a href= ''
+            a href= '/account/#{@current_account['username']}/messages/#{@current_account['id']}'
              img src='/arrow.png' style='width:18pt;margin-left:7pt;'
 #include :project_new_partial
