--- a/views/nav.slim
+++ b/views/nav.slim
@@ -13,7 +13,7 @@ nav role="navigation" class="navbar navbar-default navbar-static-top"
       ul class="nav navbar-nav"
         - if @current_account
           li
-            a href="/account/#{@current_account['username']}/messages" messages
+            a href="/account/#{@current_account['id']}/messages" messages
           li class="dropdown"
             a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
               = "#{@current_account['username']}"
