--- a/views/account.slim
+++ b/views/account.slim
@@ -1,29 +1,30 @@
 h1 Account Details
 
-div class="container"
-  div class="row"
+div class="container" style='border-top:solid 1pt;font-size:15pt;font-family:Microsoft JhengHei;background-color:#F8F8FF;'
+  div class="row" style='line-height:100px;background-color:#F5F5F5;'
     div class="col-sm-2" Username:
     div class="col-sm-10"
       == @current_account['username']
-  br
-  div class="row"
+  
+  div class="row" style='line-height:100px;'
     div class="col-sm-2" Email:
     div class="col-sm-10"
       == @current_account['email']
-  br
-  div class="row"
+  
+  div class="row" style='line-height:100px;background-color:#F5F5F5;'
     div class="col-sm-2" Token:
     div class="col-sm-10"
-      a data-toggle="collapse" href="#token" aria-expanded="false" aria-controls="token" show token
+      button  data-toggle="collapse" type="button" class="btn btn-info" href="#token" aria-expanded="false" aria-controls="token" Show Token
       div id="token" class="collapse well"
         code class="force-wrap"
           == @auth_token
-  br
-  div class="row"
+  
+  div class="row" style='line-height:100px;'
     div class="col-sm-2" Public Key:
     div class="col-sm-10" 
       - if @key_message != ''
-        td #{@key_message['data']['attributes']['key']}
+        button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" Show Public
+        div style='line-height:20px;' id="demo" class="collapse well" #{@key_message['data']['attributes']['key']}
       -else
         form action='/account/createpublickey' method='post' id='user-form'
           textarea name='public_key_input' id='public_key_input'
