--- a/views/new_message.slim
+++ b/views/new_message.slim
@@ -1,8 +1,8 @@
 div class="row" style="vertical-align: bottom;"
-  div class="col-xs-12" style='margin-bottom:20pt;'
+  div class="col-md-12" style='margin-bottom:20pt;'
     h3 New A Messages
   
-  div class="col-xs-12" style='margin-bottom:70pt;'
+  div class="col-md-12" style='margin-bottom:70pt;'
     form action='/account/#{@current_account['id']}/new_message/' method='post' id='user-form'
       div align='left' style='background-color:gray;height:30pt;'
         p style='color:white;font-size:21pt;margin-left:5pt;' SENT TO
@@ -14,24 +14,23 @@ div class="row" style="vertical-align: bottom;"
         br
       div align='left' style='background-color:gray;height:30pt;'
         p style='color:white;font-size:21pt;margin-left:5pt;' CONTENT
-      div align='left' style='padding-left:15pt;font-size:15pt;background-color:#F8F8FF;min-height:500pt;'
-        br
+      div align='left' style='padding:15pt;font-size:15pt;background-color:#F8F8FF;min-height:500pt;'
         p Title：
-        input type='text' name='title_input' id='title_input'
+        input type="text" class="form-control" name='title_input' id='title_input'
         br
         p About：
-        input type='text' name='about_input' id='about_input'
-        br
+        input type="text" class="form-control" name='about_input' id='about_input'
+
         p style='display:none;' Status：
-        input style='display:none;' type='text' name='status_input' id='status_input'
+        input style='display:none;' type="text" class="form-control" name='status_input' id='status_input'
         br
         p Expire date：
-        input type='text' name='expire_input' id='expire_input'
+        input type="text" class="form-control" name='expire_input' id='expire_input'
         hr
         p Content：
-        textarea name='content_input' id='content_input'
+        textarea type="text" class="form-control" rows="7" name='content_input' id='content_input'
         br
         br
           a href='#'
-            input type='submit' id='registration-form-submit' class='submit btn-primary' value='submit' 
+            input type='submit' id='registration-form-submit' class='submit btn-primary' value='submit' style="width:100%;border:none;height:30pt;"
 #include :project_new_partial
