change id into username, design

--- a/views/account.slim
+++ b/views/account.slim
@@ -1,6 +1,6 @@
 h1 Account Details
 
-div class="container" style='border-top:solid 1pt;font-size:15pt;font-family:Microsoft JhengHei;background-color:#F8F8FF;'
+div class="container col-md-12" style='font-size:15pt;font-family:Microsoft JhengHei;background-color:#F8F8FF;margin-top:30pt;margin-bottom:30pt;'
   div class="row" style='line-height:100px;background-color:#F5F5F5;'
     div class="col-sm-2" Username:
     div class="col-sm-10"
