--- a/views/layout.slim
+++ b/views/layout.slim
@@ -28,7 +28,7 @@ html
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 
     == slim :nav
-    div class='container' id='html_body' align='center'
+    div class='container col-md-12' id='html_body' align='center'
       section
         == slim :flash_bar
         == yield
