--- a/views/new_message.slim
+++ b/views/new_message.slim
@@ -8,8 +8,11 @@ div class="row" style="vertical-align: bottom;"
         p style='color:white;font-size:21pt;margin-left:5pt;' SENT TO
       div align='left' style='padding-left:15pt;font-size:15pt;background-color:#F8F8FF;'
         br
-        p USER ID：
-        input type='text' name='id_input' id='id_input'
+        p style='display:none;' USER ID：
+        input type='text' name='id_input' id='id_input' style='display:none;'
+        
+        p RECEIVER NAME：
+        input type='text' name='receiver_input' id='receiver_input'
         br
         br
       div align='left' style='background-color:gray;height:30pt;'
