--- a/views/nav.slim
+++ b/views/nav.slim
@@ -1,5 +1,5 @@
-nav role="navigation" class="navbar navbar-default navbar-static-top"
-  div class="container-fluid"
+nav role="navigation" class="navbar navbar-default navbar-static-top" style="height:60pt;"
+  div class="container-fluid" style="margin-top:2pt;"
     div class="navbar-header"
       button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"
       span class="sr-only" Toggle navigation
@@ -7,15 +7,15 @@ nav role="navigation" class="navbar navbar-default navbar-static-top"
       span class="icon-bar"
       span class="icon-bar"
       a class="navbar-brand" rel="home" href="/" title="Securely Chat"
-        img alt="Wispers" src="/wispers.png" style="max-width:35px; margin-top: -7px;"
-      a class="navbar-brand" href="/" Wispers
-    div id="navbarCollapse" class="collapse navbar-collapse"
+        img alt="Wispers" src="/wispers.png" style="max-width:55px; margin-top: -7px;"
+      a class="navbar-brand" href="/" style="margin-top:7pt;color:white;" Wispers
+    div id="navbarCollapse" class="collapse navbar-collapse" style="margin-top:7pt;"
       ul class="nav navbar-nav"
         - if @current_account
           li
-            a href="/account/#{@current_account['id']}/messages" messages
+            a href="/account/#{@current_account['id']}/messages" style="color:white;" messages
           li class="dropdown"
-            a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
+            a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white;" role="button" aria-haspopup="true" aria-expanded="false"
               = "#{@current_account['username']}"
             ul class=-"dropdown-menu"
               li
@@ -24,6 +24,6 @@ nav role="navigation" class="navbar navbar-default navbar-static-top"
                 a href='/account/logout' logout
         - else
           li
-            a href='/account/login' login
+            a href='/account/login' style="color:white;" login
           li
-            a href='/account/register' register
+            a href='/account/register' style="color:white;" register
